[BUGFIX] Popout Position

--- a/app/sass/theme.scss
+++ b/app/sass/theme.scss
@@ -129,6 +129,10 @@ p {
 	}
 }
 
+.leaflet-popup {
+	padding-bottom: 40px;
+}
+
 a.hvr-sweep-to-right {
 	display: inline-block;
 	vertical-align: middle;
